--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches: [ main ]
 
+permissions:
+  contents: write
+  pull-requests: write
+  packages: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -19,6 +24,9 @@ jobs:
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+
+    - name: Fetch all tags
+      run: git fetch --tags origin
 
     - name: Setup Node.js
       uses: actions/setup-node@v3
@@ -48,4 +56,6 @@ jobs:
           --git.tagName="v${version}" \
           --github.release=true \
           --npm.publish=true \
-          --no-git.requireCleanWorkingDir
+          --no-git.requireCleanWorkingDir \
+          --github.draft=false \
+          --github.skipChecks=true
